# IE17

./: IE17-Client.sln  README.md
IE17-Client/: CMakeLists.txt  IE17-Client.vcxproj  IE17-Client.vcxproj.filters  actors.cpp  actors.h  dllmain.cpp  gameconstants.h  main.cpp  main.h  player.cpp  player.h  script.cpp  toolchain-windows.cmake
IE17-Client/IE17-Client/x64/Release/: IE17-Client.dll.recipe  IE17-Client.iobj  IE17-Client.ipdb  dllmain.asm  main.asm
IE17-Client/IE17-Client/x64/Release/IE17-Client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  IE17-Client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
IE17-Client/kiero/minhook/dll_resources/: MinHook.aps
IE17-Client/src/: ImGuiConsole.cpp  ImGuiConsole.h  actors.cpp  actors.h  enums.h  functions.cpp  functions.h  gameconstants.h  lua_functions.cpp  lua_functions.h  main.cpp  main.h  player.cpp  player.h  script.cpp  script.h
